# python-data-tracking

./: .gitignore  README.md  cli.py  pyproject.toml  settings.py
collector/: cli.py  collector.py  proto_test_script.py
endpoint/: app.py  kafka_utils.py  views.py
proto/analytics_schema/: options.proto
proto/analytics_schema/game/: segments.proto  track_event.proto
proto/analytics_schema/game/aggregations/: install.proto
proto/analytics_schema/game/events/: test.proto
proto/analytics_schema/game2/: segments.proto  track_event.proto
proto/analytics_schema/game2/events/: test.proto
proto/data_tracking_proto/: options.proto
proto/data_tracking_proto/proto_test/: test.proto
proto_builder/: builder.py  cli.py
schema_migration/: cli.py  database.py  table.py  utils.py  view.py
schema_migration/clickhouse_engines/: __init__.py  base.py  distributed.py  kafka.py  merge_tree.py  replicated_merge_tree.py  url.py
