[tool.poetry]
name = "python-data-tracking"
version = "0.1.0"
description = "Library for data tracking using kafka and clickhouse"
authors = ["Aleksei Zolotukhin <zolotukhin89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.27.2"
grpcio-tools = "^1.27.2"
mypy-protobuf = "^1.19"
click = "^7.0"
aiohttp = "^3.6.2"
aiokafka = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


